fix live section spacing

--- a/src/components/sections/Live/Live.module.scss
+++ b/src/components/sections/Live/Live.module.scss
@@ -4,7 +4,7 @@
     display: flex;
     flex-direction: column;
     align-items: flex-start;
-    justify-content: space-between;
+    justify-content: center;
     width: 100%;
     padding-top: 64px;
     padding-bottom: 64px;
